--- a/resume.tex
+++ b/resume.tex
@@ -54,6 +54,12 @@ NC 27516& {\it WWW:} \url{http://cs.unc.edu/~banga/} \\
 \end{list1}
 
 \section{\sc Experience}
+{\bf Google Inc.}, Mountain View, California \hfill {\bf May~-~August, 2012}\\
+{\em Software Engineering Intern - Chrome Speed Team.}
+Created a tool for automatic regression alerts in Chrome performance.
+Fixed a WebKit bug which increases performance by a few percent.
+Analyzed the effects of DNS alias selection.
+
 {\bf Adobe Systems Inc.}, NOIDA \hfill {\bf January~-~August, 2011}\\
 {\em Member of Technical Staff}\par
 \begin{list2}
@@ -61,10 +67,7 @@ NC 27516& {\it WWW:} \url{http://cs.unc.edu/~banga/} \\
 \end{list2}
 
 {\bf Center for Visual Information Technology}, IIIT Hyderabad, \hfill {\bf July~-~December, 2010}\\
-{\em Project Engineer}\par
-\begin{list2}
-\item {\em Computer Graphics Virtual Lab.} Designed a Computer Graphics {\em Virtual Lab}, a government of India initiative intended for teaching sciences across colleges in India.
-\end{list2}
+{\em Project Engineer - Computer Graphics Virtual Lab.} Designed a virtual lab for Computer Graphics, as part of a Government of India initiative for teaching sciences across colleges in India.
 
 {\bf Deloitte \& Touche}, Hyderabad, India \hfill {\bf June, 2009 to April, 2010}\\
 {\em Consultant}\par
@@ -76,10 +79,7 @@ of network infrastructure of several Fortune 500 companies and designed strategi
 \end{list2}
 
 {\bf IBM India Software Labs}, Bangalore, India \hfill {\bf May, 2008 to July, 2008}\\
-{\em Engineering Intern}\par
-\begin{list2}
-\item {\em EAR PlanCreator for Apache Geronimo.} An ajax-based plugin for quickly creating deployment plans for enterprise applications.
-\end{list2}
+{\em Engineering Intern - EAR PlanCreator for Apache Geronimo.} An ajax-based plugin for quickly creating deployment plans for enterprise applications.
 
 \section{\sc Projects}
 {\bf Computer Graphics}
@@ -97,12 +97,13 @@ matrix transformations, shading models, texture mapping, reflection and refracti
 
 {\bf Android Development}
 \begin{list2}
-\item {\em DownloadAccelerator.} An Android app that accelerates downloads by splitting files into multiple parts and downloading them concurrently. The user can see all the parts of the file as they are downloaded and launch, delete or re-download the file.\hfill {\bf January - August, 2011}
+\item {\em DownloadAccelerator.} An Android app that accelerates downloads by splitting files into multiple parts and downloading them concurrently. \hfill {\bf January - August, 2011}
 \end{list2}
 
-{\bf Chrome Extension}
+{\bf Chrome Extensions}
 \begin{list2}
-\item {\em Counter.} A chrome extension that counts your visits to websites and optionally, blocks the page for a short time, giving you the time to let the feeling pass. \hfill {\bf January - August, 2011}
+\item {\em Google Mail Multi-Account Checker.} Shows multiple Gmail inboxes in a single pop-up, with common tasks such as delete, archive and mark as read. Over {\bf 16,000} users.\hfill {\bf October, 2011}
+\item {\em Counter.} Counts your visits to websites and optionally blocks the page for a short time. \hfill {\bf January - August, 2011}
 \end{list2}
 
 {\bf Vim Plugin}
@@ -112,25 +113,25 @@ matrix transformations, shading models, texture mapping, reflection and refracti
 
 {\bf Machine Learning}
 \begin{list2}
-\item {\em Facial Expression Recognition.} Improvised present machine learning algorithms for expression recognition using a combination of Local Binary Patterns and SVM based classifiers.\hfill {\bf January~-~May, 2008}
+\item {\em Facial Expression Recognition} using a combination of Local Binary Patterns and SVM based classifiers.\hfill {\bf January~-~May, 2008}
 %\item {\em Depth estimation from single monocular images.} Implemented a Gaussian Markov model for predicting depth from textural and monocular cues. Parameters of the model were learnt from training data and used to predict depth of a single test image. It was based on the paper, {\em 3-D Depth Reconstruction from a Single Still Image} by Ashutosh Saxena, Sung H. Chung and Andrew Y. Ng. \hfill {\bf August, 2008~-~May, 2009}
 \end{list2}
 
 {\bf Microprocessors}
 \begin{list2}
-\item {\em Intel 8085A Emulator.} An emulator for the Intel 8085A microprocessor with a modern looking GUI that can step through each instruction cycle and display the effects on flags and memory. Useful messages were displayed to help students learn 8085 assembly.\hfill {\bf January~-~May, 2007}
+\item {\em Intel 8085A Emulator.} An emulator for the Intel 8085A microprocessor with a modern GUI, for use in teaching.\hfill {\bf January~-~May, 2007}
 \end{list2}
 
 {\bf Web Design}
 \begin{list2}
-\item {\em Watch Out! News Agency.} Designed the website for the students' news magazine of IIT Roorkee, as a member and Chief Web Coordinator. The website hosts all published issues of the magazine along with discussion forums, photographs and other information.
+\item {\em Watch Out! News Agency.} Designed the website for the students' news magazine of IIT Roorkee, as a member and Chief Web Coordinator.
 \item {\em Thomso'07 \& Srishti'07} Designed websites for several cultural and technical festivals at IIT Roorkee.
 \end{list2}
 
 \section{\sc Co-curricular Activities} 
 {\bf Software Development Section, Hobbies Club}, IIT Roorkee
 \begin{list2}
-\item Designed a Steganography software, a networked two-player strategy game and a website, all of which won awards at the annual  technical exhibition, {\em Srishti}.
+\item Designed a Steganography application, a networked 2-player game and a website, all of which won awards at the annual exhibition, {\em Srishti}.
 \end{list2}
 {\bf Programming Contests}
 \begin{list2}
@@ -139,12 +140,11 @@ matrix transformations, shading models, texture mapping, reflection and refracti
 \end{list2}
 {\bf Literary Section}, IIT Roorkee
 \begin{list2}
-\item Organized and participated in several quizzes, debates and other literary events with several podium finishes.
+\item Organized and participated in several quizzes, debates and other events.
 \end{list2}
 {\bf Member, Executive Editor \& Chief Web Coordinator}, {\em Watch Out! News Agency},
 \begin{list2}
-\item Edited and formatted the students' news magazine, {\em Watch Out!}.
-\item Designed the magazine's website \url{http://www.wona.co.in/}
+\item Edited, formatted  and maintained the website for the students' news magazine, {\em Watch Out!}.
 \end{list2}
 {\bf Chief Web Designer, Thomso'07}, IIT Roorkee
 \begin{list2}
@@ -154,11 +154,11 @@ matrix transformations, shading models, texture mapping, reflection and refracti
 \section{\sc Computer Skills} 
 {\bf Languages}
 \begin{list1}
-\item[]  C, C++, Java, Python, 8085 Assembly, JavaScript, ActionScript, HTML+CSS%, PHP, shell scripting
+\item[]  C, C++, Java, Python, JavaScript, HTML+CSS, 8085 Assembly, Bash script
 \end{list1}
 {\bf Platforms \& Tools}
 \begin{list1}
-\item[] Visual Studio, Vim, Unix shell, MATLAB, \LaTeX{}
+\item[] Visual Studio, Vim, MATLAB, \LaTeX{}
 \end{list1}
 
 \end{resume}
