Update quora experience, trim some parts
Don't think anyone cares about co-curriculars

--- a/resume.tex
+++ b/resume.tex
@@ -37,16 +37,16 @@
 \begin{resume}
 \section{\sc Contact Information}
 \vspace{.05in}
-\begin{tabular}{@{}p{2in}p{4in}}
+\begin{tabular}{@{}p{4in}p{4in}}
 {\it E-mail:}  banga.shrey@gmail.com  & {\it Phone:}  (919)-448-8780 \\            
-{\it Websites:} \url{cs.unc.edu/~banga/} & \url{www.github.com/milkbikis/} \\
+{\it Websites:} \url{github.com/milkbikis} & \url{quora.com/shrey} \\
 \end{tabular}
 
 \section{\sc Education}
 \textsc{University \textit{of} North Carolina \textit{at} Chapel Hill}, Chapel Hill, NC, USA\\
 \vspace*{-.1in}
 \begin{list1}
-\item[] Master of Science in Computer Science, May, 2013 (expected)
+\item[] Master of Science in Computer Science, May, 2013
 \end{list1}
 
 \textsc{Indian Institute \textit{of} Technology Roorkee}, Roorkee, Uttarakhand, India\\
@@ -64,12 +64,15 @@
 
 \datesection{June, 2013~-~Present}
 \employer{\bf Quora Inc.}
-\title{\em Software Engineer}
+\title{\em Software Engineer, Platform}
 \location{Mountain View, California}
 \begin{position}
-Launched a number of experiments to improve growth metrics.
-Built tools to understand and improve site speed.
-Part of the group responsible for improving code-quality.
+Currently redesigning the rich text editor frontend.
+Built per-developer instances to make development safe and fast.
+Wrote several highly used internal tools, including an extensible linter, a tool for pushing, testing and linting code, grep for sql queries and a UI testing system.
+Re-designed our feature gating abstraction.
+Leading the code quality group at Quora.
+Built speed measurement tools and shipped a number of growth experiments.
 \end{position}
 
 \datesection{May~-~August, 2012}
@@ -141,7 +144,7 @@ shading models, textures, reflection and refraction, global illumination, kD-tre
 \end{list2}
 
 \datesection{August, 2012}
-{\href{https://github.com/milkbikis/powerline-bash}{Powerline for Bash}} A Python script that renders a beautiful and useful bash prompt
+{\href{https://github.com/milkbikis/powerline-shell}{Powerline}} A Python script to render a beautiful and useful shell prompt. \textbf{Over 1k stars}
 \datesection{May, 2011}
 {\href{http://www.vim.org/scripts/script.php?script_id=3630}{IDSearch.vim}} A front-end to GNU ID utils which adds find-in-files support to {\em Vim} for large projects where grep isn't fast enough.
 
@@ -177,23 +180,8 @@ shading models, textures, reflection and refraction, global illumination, kD-tre
 
 \textbf{Platforms \& Tools}
 	\begin{list1}
-		\item[] Vim, unix commands, git, Eclipse, Visual Studio, \LaTeX{}
+		\item[] Vim, unix, git, Eclipse, Visual Studio, \LaTeX{}
 	\end{list1}
-
-\section{\sc Co-curricular Activities}
-{\bf Programming Contests}
-\begin{list2}
-\item Third in {\em Code Sangram}, an {\em IEEE (Roorkee chapter)} programming contest.
-\item Participate regularly in programming contests on CodeChef, SPOJ, CodeJam, Hacker Cup etc.
-\end{list2}
-
-{\bf Software Development Section, Hobbies Club}, IIT Roorkee
-
-Quizzing and Debating at {\bf Literary Section}, IIT Roorkee
-
-{\bf Executive Editor \& Chief Web Coordinator}, {\em Watch Out! News Agency}, IIT Roorkee
-
-{\bf Chief Web Designer, Thomso'07}, IIT Roorkee
 
 \end{resume}
 \end{document}
